<resources>

    <string name="app_name">Notebook</string>
    <string name="notes">My Notes</string>
    <string name="search">Search your notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_subtitle">Notes Subtitle</string>
    <string name="notes_description">Enter Note Here</string>
    <string name="notes_web_url">Enter Web Url</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="text_btn_ok">OK</string>
    <string name="text_btn_cancel">Cancel</string>

    <!--  description  -->
    <string name="imageview">ImageView</string>
    <string name="floatingactionbutton">FloatingActionButton</string>

    <!--  text for user  -->
    <string name="text_add_image">Add Image</string>
    <string name="text_pick_color">Pick Color</string>
    <string name="text_web_link">Add Web Link</string>

</resources>